frontend/src/css/viewports.css
@media (max-width: 1000px) {
    #articleMainContainer {
        width: 100% !important;
    }
    #logoIcon {
        width: 24px !important;
    }
}

@media (max-width: 600px) {
    .searchBarContainer {
        height: 34px;
    }
    #navTitleParent {
        display: none;
    }
    #headNavIcons {
        display: none;
    }
    #outerSearchContainer {
        gap: 45px;
    }
    #searchBar {
        font-size: 16px;
        height: 38px;
    }
    #articleContainer {
        padding: 0px;
        width: auto;
    }
    #articleContent {
        font-size: 16px;
    }
    #spinnerContainer {
        height: 38px;
    }
    #articleIframe {
        height: 200px;
    }
    #articleImage {
        height: 300px;
    }
    #articleSubtitle {
        padding: 0px 15px 0px 15px;
    }
    #articleContainer {
        border: none;
    }
    #headNavigation {
        padding-left: 10px;
        padding-right: 10px;
    }
    #mobileBurgerMenuIcon {
        display: block;
        flex: unset !important;
        width: 28px;
    }
    #mobileBurgerMenu {
        display: none;
        position: absolute;
        padding: 15px;
        border-left: 1px solid rgba(128, 128, 128, 0.4);
        width: 70%;
        height: 100%;
        right: 0;
        box-sizing: border-box;
        z-index: 99;
        background-color: #252629;
        color: white;
        box-shadow: -50px 0px 50px rgba(0, 0, 0, 0.75);
    }
    #burgerMenuClose {
        font-weight: normal;
        text-decoration: underline;
        text-underline-offset: 4px;
        margin-bottom: 30px;
        font-size: 14px;
        color: rgb(110, 113, 148);
    }
    #burgerMenuList {
        display: flex;
        flex-direction: column;
        gap: 10px;
    }
    #burgerMenuList > div {
        padding: 5px 5px 5px 0px;
        font-size: 20px;
    }
    #controlSearchFeedbackContainer {
        width: auto;
    }
    #loadNoticeText {
        font-size: 10px;
    }
    #controlSearchBarContainer {
        width: 145px;
    }
    #tabGroupsAndControlsWrapper {
        position: sticky;
        top: 0;
        width: 100%;
    }
    #tabGroupsAndControls {
        position: absolute;
    }
    #tabGroupsAndControls.down {
        transition-property: all;
        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
        transition-duration: 300ms;
    }

    p {
        padding: 0px 15px 0px 15px;
    }
    ul {
        padding: 0px 15px 0px 15px;
    }
    h1, h2, h3, h4 {
        padding: 0px 15px 0px 15px;
    }
    figure {
        margin-bottom: 20px;
    }
    figcaption {
        color: rgb(86, 82, 118);;
        font-size: 14px;
        text-align: left !important;
        padding: 0px 15px 0px 15px;
    }
}

@media (max-width: 500px) {
    #midContainerTitle {
        font-size: 26px;
    }
}

